# theme-news

./: .gitignore  README.md  pyproject.toml  pytest.ini
.cursor/rules/: development_process.mdc
markdown/: LLM_Trend_Theme_Extraction_Agent_Design.md  LLM_Trend_Theme_Extraction_Agent_Design.txt  LLM_Trend_Theme_Extraction_Agent_Dev_Plan.md  TODO.md  testcase-guide.md  testcase.md  testcase2.md
markdown/diagrams/: agent_architecture.md  test_diagram.md
tests/: conftest.py  test_blog_cafe_api_tool.py  test_data_collection_agent.py  test_data_collection_models.py  test_dependency_management.py  test_directory_structure.py  test_financial_trend_tool.py  test_git_ignore.py  test_news_api_tool.py  test_project_files.py  test_search_trend_tool.py  test_web_crawling_tool.py
tests/sub_agents/data_collection/: test_agent.py
tests/sub_agents/keyword_extraction/: test_agent.py  test_ke_agent.py  test_prompt.py
tests/sub_agents/keyword_extraction/tools/: test_frequency_calculator.py
tests/sub_agents/summary_generation/: test_sg_agent.py  test_sg_prompt.py
tests/sub_agents/theme_clustering/: test_agent.py  test_tc_prompt.py
tests/sub_agents/trend_analysis/: test_agent.py
theme_news_agent/: .env.example  README.md  pyproject.toml
theme_news_agent/sub_agents/data_collection/: agent.py  models.py
theme_news_agent/sub_agents/data_collection/tools/: blog_cafe_api_tool.py  financial_trend_tool.py  news_api_tool.py  search_trend_tool.py  web_crawling_tool.py
theme_news_agent/sub_agents/keyword_extraction/: agent.py  prompt.py
theme_news_agent/sub_agents/keyword_extraction/tools/: frequency_calculator.py
theme_news_agent/sub_agents/summary_generation/: agent.py  prompt.py
theme_news_agent/sub_agents/theme_clustering/: agent.py  prompt.py
theme_news_agent/sub_agents/trend_analysis/: agent.py
theme_news_agent/sub_agents/trend_analysis/tools/: stats_tool.py
(+1 files in other folders)
